# fastapi-crud

./: README.md  pyproject.toml
.github/workflows/: ruff.yml  test.yml
src/: main.py
src/api/v1/endpoints/: users.py
src/infra/: models.py
src/infra/database/: deps.py  models.py  session.py
src/models/: user.py
src/repositories/: user_repository.py
src/schemas/: user.py
src/usecase/: create_user.py  user_usecase.py
tests/: conftest.py  test_create_user.py
