[project]
name = "fast-api-crud"
version = "0.1.0"
description = "FastAPI Users CRUD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.25",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
